RESOLVED FIXED303788
AX: It's not safe to immediately call getOrCreate when documents load, as style or layout can be dirty, causing CheckedPtr<RenderObject> crashes
https://bugs.webkit.org/show_bug.cgi?id=303788
Summary AX: It's not safe to immediately call getOrCreate when documents load, as sty...
Tyler Wilcock
Reported 2025-12-08 16:39:53 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-08 16:39:59 PST
Tyler Wilcock
Comment 2 2025-12-08 17:42:05 PST
Tyler Wilcock
Comment 3 2025-12-08 17:44:51 PST
EWS
Comment 4 2025-12-10 18:16:08 PST
Committed 304272@main (952a3d64ad97): <https://commits.webkit.org/304272@main> Reviewed commits have been landed. Closing PR #55073 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.